--- a/package.json
+++ b/package.json
@@ -37,9 +37,8 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
-    "babel-plugin-transform-object-rest-spread": "^6.22.0",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "babel-preset-env": "^1.5.2",
+    "next": "^2.4.4",
     "pre-commit": "^1.2.2",
     "standard": "^10.0.2"
   }
