--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "path-to-regexp": "^2.1.0"
   },
   "peerDependencies": {
-    "next": "2 - 3 || ^4.0.0-beta",
+    "next": "2 - 5",
     "react": "^15.4.2 || ^16"
   },
   "devDependencies": {
